--- a/template/uwsgi.ini
+++ b/template/uwsgi.ini
@@ -1,8 +1,8 @@
 [uwsgi]
 
-env = DJANGO_SETTINGS_MODULE=tamarindo.settings
+env = DJANGO_SETTINGS_MODULE={{name}}.settings
 chdir           = /app
-module          = tamarindo.wsgi
+module          = {{name}}.wsgi
 master          = true
 processes       = 3
 http            = :8000
