--- a/template/requirements.txt
+++ b/template/requirements.txt
@@ -1,6 +1,17 @@
-Django==1.11
-django-sql-explorer==1.1.1
-psycopg2==2.7.4
-python-dateutil==2.6.1
-coverage==4.5
-tblib==1.3.2
+# Django
+Django==4.0.5
+asgiref==3.5.2
+sqlparse==0.4.2
+tzdata==2022.1
+
+# 3rd
+django-sql-explorer==2.4.2
+
+# DB
+psycopg2==2.9.3
+
+# ENV
+python-dotenv==0.20.0
+
+# PROD
+uWSGI==2.0.20
