Fix setup frontend

--- a/template/.env
+++ b/template/.env
@@ -1,7 +1,7 @@
 DEBUG=1
 SECRET_KEY='cria-um-segredo-qualquer'
-LANGUAGE_CODE='pt-br'
-TIME_ZONE='America/Sao_Paulo'
+LANGUAGE_CODE=pt-br
+TIME_ZONE=America/Sao_Paulo
 
 POSTGRES_DB=db_tasks
 POSTGRES_USER=tasks
