Ajustes no docker-compose para funcionar com containers back/front separados

--- a/template/docker-compose.yml
+++ b/template/docker-compose.yml
@@ -1,40 +1,64 @@
-version: "2.4"
+version: "3"
 
 services:
-  postgres_local:
-    image: "postgres:13.3-alpine"
-    ports:
-      - "15432:5432"
-    env_file:
-      - .env
-    volumes:
-      - postgres_data:/var/lib/postgresql/data
-
-  django_api:
-    image: {{ name }}
-    network_mode: "host"
+  backend:
+    image: back-{{ name }}
+    hostname: back-{{ name }}
     build:
       context: ./
       dockerfile: Dockerfile
     env_file:
       - .env
-    # environment:
-    #   - POSTGRES_HOST=postgres_local
+    network_mode: "host"
+    command: ./docker/bin/start_dev.sh
+    # command: bash -c "python manage.py migrate && python manage.py runserver 0.0.0.0:8000"
+    # command: bash -c "sleep infinity"
     expose:
       - "8000"
-      - "3000"
     volumes:
       - ./:/app
-      - /app/frontend/node_modules
-    tty: true
     depends_on:
-      - postgres_local
+      - postgres
+
+  postgres:
+    image: "postgres:13.3-alpine"
+    ports:
+      - 15432:5432
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
+    env_file:
+      - .env
+    restart:
+      on-failure
+      #- "./docker/postgres/pg_hba.conf:/usr/local/etc/postgres/postgres.conf"
+
+  frontend:
+    build:
+      context: ./frontend
+      args:
+        NUXT_PUBLIC_PATH: http://localhost/static/
+    image: front-{{ name }}
+    container_name: front-{{ name }}
+    hostname: front-{{ name }}
+    command: npm run dev
+    network_mode: "host"
+    expose:
+      - "3000"
+    env_file:
+      - .env
+    volumes:
+      - /frontend/node_modules
+      - ./frontend:/frontend
+    depends_on:
+      - backend
 
   nginx:
     image: nginx
     network_mode: "host"
     volumes:
       - ./docker/nginx/default_local:/etc/nginx/conf.d/default.conf
+    depends_on:
+      - frontend
 
 volumes:
   postgres_data:
