--- a/template/setup.cfg
+++ b/template/setup.cfg
@@ -1,4 +1,4 @@
 [tool:pytest]
-DJANGO_SETTINGS_MODULE = mytodolist2.settings
+DJANGO_SETTINGS_MODULE = {{ name }}.settings
 python_files = tests.py test_*.py *_tests.py
 addopts = -x -vv
