--- a/template/Dockerfile
+++ b/template/Dockerfile
@@ -25,8 +25,9 @@ RUN mkdir /dkdata
 
 #### Prepare BACKEND Django API
 COPY requirements.txt ./
+COPY requirements-dev.txt ./
 
-RUN pip install -r requirements.txt
+RUN pip install -r requirements-dev.txt
 
 ENV PYTHONUNBUFFERED=1 
 ENV PYTHONDONTWRITEBYTECODE=1
