Adiciona flake8 para code linter

--- a/template/setup.cfg
+++ b/template/setup.cfg
@@ -2,3 +2,17 @@
 DJANGO_SETTINGS_MODULE = {{ name }}.settings
 python_files = tests.py test_*.py *_tests.py
 addopts = -x -vv
+
+[flake8]
+extend-ignore = E203
+exclude =
+    .git,
+    __pycache__,
+    docs/source/conf.py,
+    migrations,
+    tests,
+    old,
+    build,
+    dist
+max-complexity = 10
+max-line-length = 120
