--- a/template/frontend/package.json
+++ b/template/frontend/package.json
@@ -1,7 +1,7 @@
 {
   "name": "frontend",
   "version": "1.0.0",
-  "description": "Nuxt.js project",
+  "description": "Djavue (Django + Vue|Nuxt.js|Vuetify production-ready project",
   "author": "tonylampada <tonylampada@gmail.com>",
   "private": true,
   "scripts": {
@@ -29,8 +29,8 @@
     "@nuxtjs/eslint-module": "^3.0.2",
     "@nuxtjs/vuetify": "^1.12.3",
     "babel-eslint": "^10.1.0",
-    "eslint": "^8.4.1",
+    "eslint": "^8.25.0",
     "eslint-plugin-nuxt": "^3.1.0",
-    "eslint-plugin-vue": "^8.2.0"
+    "eslint-plugin-vue": "^9.6.0"
   }
 }
