--- a/template/docker-compose.yml
+++ b/template/docker-compose.yml
@@ -39,7 +39,6 @@ services:
       args:
         NUXT_PUBLIC_PATH: http://localhost/static/
     image: front-{{ name }}
-    container_name: front-{{ name }}
     hostname: front-{{ name }}
     command: npm run dev
     network_mode: "host"
@@ -50,14 +49,14 @@ services:
     volumes:
       - /frontend/node_modules
       - ./frontend:/frontend
+    depends_on:
+      - nginx
 
   nginx:
     image: nginx
     network_mode: "host"
     volumes:
       - ./docker/nginx/default_local:/etc/nginx/conf.d/default.conf
-    depends_on:
-      - frontend
 
 volumes:
   postgres_data:
