--- a/template/docker-compose.yml
+++ b/template/docker-compose.yml
@@ -1,5 +1,3 @@
-version: "3"
-
 services:
 
   backend:
@@ -19,7 +17,8 @@ services:
     volumes:
       - ./:/app
     depends_on:
-      - postgres
+      postgres:
+        condition: service_healthy
 
   postgres:
     image: "postgres:13.3-alpine"
@@ -31,6 +30,11 @@ services:
       - .env
     restart:
       on-failure
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -d $POSTGRES_DB -U $POSTGRES_USER"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
       #- "./docker/postgres/pg_hba.conf:/usr/local/etc/postgres/postgres.conf"
 
   frontend:
