Issue 12, move parte do django (backend) para uma pasta separada, assim na raiz fica apenas coisas fora do backend.

--- a/template/uwsgi.ini
+++ b/template/uwsgi.ini
@@ -1,8 +1,8 @@
 [uwsgi]
 
-env = DJANGO_SETTINGS_MODULE={{name}}.settings
+env = DJANGO_SETTINGS_MODULE={{name}}.{{name}}.settings
 chdir           = /app
-module          = {{name}}.wsgi
+module          = {{name}}.{{name}}.wsgi
 master          = true
 processes       = 3
 http            = :8000
