Fix devcontainer para subir o frontend

--- a/template/.devcontainer/devcontainer.json
+++ b/template/.devcontainer/devcontainer.json
@@ -21,6 +21,7 @@
     ],
     // Uncomment the next line if you want start specific services in your Docker Compose config.
     "runServices": [
+        "frontend",
         "postgres",
         "nginx"
     ],
