--- a/template/apimock/package.json
+++ b/template/apimock/package.json
@@ -6,8 +6,7 @@
     "apimock": "node server",
     "apimock:watch": "nodemon server"
   },
-  "dependencies": {
-  },
+  "dependencies": {},
   "devDependencies": {
     "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.6",
