Utiliza code style com eslint + prettier. Tks João Procópio

--- a/template/frontend/.vscode/extensions.json
+++ b/template/frontend/.vscode/extensions.json
@@ -2,6 +2,7 @@
   "recommendations": [
     "octref.vetur",
     "dbaeumer.vscode-eslint",
+    "esbenp.prettier-vscode",
     "ecmel.vscode-html-css",
     "Zignd.html-css-class-completion",
     "pranaygp.vscode-css-peek"
