--- a/template/frontend/package.json
+++ b/template/frontend/package.json
@@ -9,7 +9,7 @@
     "generate": "nuxt generate",
     "lint:js": "eslint --ext \".js,.vue\" --ignore-path .gitignore .",
     "lint": "npm run lint:js",
-    "format": "npm run lint:js -- --fix"
+    "format": "prettier .  --write"
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.13.6",
@@ -28,7 +28,10 @@
     "@nuxtjs/vuetify": "^1.12.3",
     "babel-eslint": "^10.1.0",
     "eslint": "^8.25.0",
+    "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-nuxt": "^3.1.0",
-    "eslint-plugin-vue": "^9.6.0"
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-vue": "^9.6.0",
+    "prettier": "2.8.1"
   }
 }
