--- a/template/.env
+++ b/template/.env
@@ -9,8 +9,10 @@ POSTGRES_PASSWORD=tasks
 POSTGRES_HOST=localhost
 POSTGRES_PORT=15432
 
-# API_MOCK=0
 PORT=3000 
 HOST=0.0.0.0
-API_BASE_URL='/'
+
+# FRONTEND
+API_BASE_URL=/
 NODE_ENV=development
+
