Versão inicial do frontend com Vue3 + Vuetify3 + Vite #19

--- a/template/frontend/.vscode/extensions.json
+++ b/template/frontend/.vscode/extensions.json
@@ -1,9 +1,3 @@
 {
-  "recommendations": [
-    "octref.vetur",
-    "dbaeumer.vscode-eslint",
-    "ecmel.vscode-html-css",
-    "Zignd.html-css-class-completion",
-    "pranaygp.vscode-css-peek"
-  ]
+  "recommendations": ["Vue.volar"]
 }
