--- a/template/frontend/.editorconfig
+++ b/template/frontend/.editorconfig
@@ -1,13 +1,5 @@
-# editorconfig.org
-root = true
-
-[*]
-indent_size = 2
+[*.{js,jsx,ts,tsx,vue}]
 indent_style = space
-end_of_line = lf
-charset = utf-8
+indent_size = 2
 trim_trailing_whitespace = true
 insert_final_newline = true
-
-[*.md]
-trim_trailing_whitespace = false
