--- a/template/frontend/.gitignore
+++ b/template/frontend/.gitignore
@@ -1,12 +1,22 @@
-# dependencies
+.DS_Store
 node_modules
-.eslintcache
+/dist
 
-# logs
-npm-debug.log
 
-# Nuxt build
-.nuxt
+# local env files
+.env.local
+.env.*.local
 
-# Nuxt generate
-dist
+# Log files
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+
+# Editor directories and files
+.idea
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
